--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ addressbook-web-tests/.idea/workspace.xml
 addressbook-web-tests/.idea/workspace.xml
 
 sandbox/.idea/workspace.xml
+
+sandbox/.idea/workspace.xml
