--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,3 +9,8 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.3.1'
     compile 'org.webjars.bower:marionette:3.2.0'
 }
+
+//после каждого изменения (не смотря на автосинхронизвцию) сохранять в ручную: View -> Tool Windows -> Gradel -> Sync
+// ссылка на структуру файла: https://docs.gradle.org/current/userguide/userguide.html  где то тут
+// сайт где находится библиотека тестового framework TestNG: search.maven.org разные сборщики исп. разный формат описания зависимотей,
+// выбираем Gradel копируем и вставляем в этот файл
