--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile 'org.testng:testng:6.11'
     compile 'org.seleniumhq.selenium:selenium-java:3.3.1'
     compile 'org.webjars.bower:marionette:3.2.0'
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
 
 //после каждого изменения (не смотря на автосинхронизвцию) сохранять в ручную: View -> Tool Windows -> Gradel -> Sync
