--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile 'org.webjars.bower:marionette:3.2.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'com.beust:jcommander:1.69'
+    compile 'com.thoughtworks.xstream:xstream:1.4.9'
 }
 
 //после каждого изменения (не смотря на автосинхронизвцию) сохранять в ручную: View -> Tool Windows -> Gradel -> Sync
