Задание 16: Реализована загрузка информации о тестовом стенде из конфигурационного файла

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,15 +13,27 @@ dependencies {
     compile 'com.thoughtworks.xstream:xstream:1.4.9'
 }
 
-task testGroups (type: Test) {
+task testGroups(type: Test) {
     useTestNG {
         suites 'src/test/resources/testngGroups.xml'
     }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${browser}"
+    }
 }
 
-task testContacts (type: Test) {
+task testContacts(type: Test) {
     useTestNG {
         suites 'src/test/resources/testngContacts.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${browser}"
     }
 }
 
