--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'com.beust:jcommander:1.69'
     compile 'com.thoughtworks.xstream:xstream:1.4.9'
+    compile 'ch.qos.logback:logback-classic:1.2.2'
+
 }
 
 task testGroups(type: Test) {
